# basements

./: .gitignore  .zenodo.json  AUTHORS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  build_debug.bat  move.bat  quick_build.ps1  run_test.bat
.github/workflows/: ci.yml  drift_bench.yml
apps/editor/: main.cpp
benchmarks/: bench_energy_drift.cpp  bench_mpm_rigid_drift.cpp  benchmark_vec3.cpp
case_studies/hardware/_template/: preregistration.md
docs/: FORK_NOTE.md  PROJECT_STATUS.md  api_reference.md  checklist.md  multi-scale_engine.md  paper_outline.md  roadmap.md
docs/notes/: INDEX.md  element_tech.md  external_validation_protocol.md  geotech_outreach.md  integration_notes.md  l3_pipeline_design.md  limitations.md  literature_uncertainty.md  pivot6_differentiable_mpm.md  references.md  risk_log.md  sim_validity_domain.md  zenodo_setup.md
examples/: example_forces.cpp  example_quaternion.cpp
extensions/ros2_bridge/: README.md  package.xml  setup.py
extensions/ros2_bridge/basements_ros2/: __init__.py  config_loader.py  driver_wrapper.py  trajectory_logger.py  trajectory_replayer.py
extensions/ros2_bridge/basements_ros2/force_estimators/: __init__.py  base.py  joint_current.py  kinematic_only.py  wrench_sensor.py
extensions/ros2_bridge/config/: mycobot_280_joint_current.yaml  mycobot_280_kinematic.yaml  mycobot_320_joint_current.yaml  mycobot_pro600_joint_current.yaml  mycobot_with_ft.yaml  sandbox_jumunjin.yaml  sandbox_ottawa_f65.yaml
include/: basements.h
include/basements/backend/: compute_backend.h  cpu_backend.h  cuda_backend.h  rocm_backend.h
include/basements/core/: task_system.h  types.h
include/basements/editor/: editor_app.h  localization.h  node_id.h
include/basements/engine/: command_history.h  module_manager.h  physics_engine.h  physics_environment.h  physics_world_gpu.h  scene_graph.h  scene_serializer.h  unified_engine.h  workspace.h
include/basements/graphics/: camera.h  framebuffer.h  gizmo.h  gl_loader.h  mesh.h  obj_loader.h  pbr_material.h  primitive_factory.h  renderer.h  shader.h
include/basements/io/: mesh_importer.h  scene_serializer.h  urdf_converter.h  urdf_parser.h  urdf_physics_bridge.h  urdf_types.h
include/basements/physics/: fatigue.h  formulas.h  fracture.h  material.h  soft_body.h  (+5 more)
outputs/figures/: energy_damped_slider.csv  energy_damped_slider_desc.md  energy_free_fall.csv  energy_free_fall_desc.md  momentum_isolated_pair.csv  momentum_isolated_pair_desc.md  mpm_rigid_drift.csv  mpm_rigid_drift_desc.md  mpm_rigid_drift_pic.csv  mpm_rigid_drift_pic_desc.md  solver_pendulum.csv  solver_pendulum_desc.md  solver_stack_drift.csv  solver_stack_drift_desc.md
research/mpm_rigid_coupling/: CMakeLists.txt  README.md  THEORY.md  bench_compare_all.cpp  frame_exporter.h  metrics.h
research/mpm_rigid_coupling/couplers/: m0_dirichlet.h  m1_pic_rigid.h  m2_asflip.h  m3_mls_mpm.h  m4_5_hybrid.h  m4_lagrange.h
research/mpm_rigid_coupling/outputs/csv/: _paper_tables.md  box_drop_M0.csv  box_drop_M0_frames.csv  box_drop_M0_metrics.csv  box_drop_M1.csv  box_drop_M1_metrics.csv  box_drop_M2_metrics.csv  box_drop_M3_metrics.csv  box_drop_M4.5.csv  box_drop_M4.5_frames.csv  box_drop_M4.5_metrics.csv  box_drop_M4.5a.csv  box_drop_M4.5a_frames.csv  box_drop_M4.5a_metrics.csv  box_drop_M4.5b.csv  box_drop_M4.5b_frames.csv  box_drop_M4.5b_metrics.csv  box_drop_M4_frames.csv  box_drop_M4_metrics.csv  box_drop_dense_M0.csv  box_drop_dense_M0_frames.csv  box_drop_dense_M0_metrics.csv  box_drop_dense_M1_metrics.csv  box_drop_dense_M2_metrics.csv  box_drop_dense_M3_frames.csv  box_drop_dense_M3_metrics.csv  box_drop_dense_M4.5.csv  box_drop_dense_M4.5_frames.csv  box_drop_dense_M4.5_metrics.csv  box_drop_dense_M4.5a.csv  box_drop_dense_M4.5a_frames.csv  box_drop_dense_M4.5a_metrics.csv  box_drop_dense_M4.5b.csv  box_drop_dense_M4.5b_frames.csv  box_drop_dense_M4.5b_metrics.csv  box_drop_dense_M4.csv  box_drop_dense_M4_metrics.csv  foot_step_M0.csv  foot_step_M0_frames.csv  foot_step_M0_metrics.csv  (+53 more)
research/mpm_rigid_coupling/outputs/figures/: compare_box_drop_dense_desc.md  compare_box_drop_desc.md  compare_foot_step_desc.md  compare_rover_wheel_desc.md  repose_pile_validation.csv  repose_pile_validation_desc.md
research/mpm_rigid_coupling/scenarios/: scenario_box_drop.h  scenario_foot_step.h  scenario_repose_pile.h  scenario_rover_wheel.h  scenario_tine_drag.h
research/mpm_rigid_coupling/scripts/: paper_table_emit.py  plot_compare.py  plot_repose_pile.py  render_animation.py  reproduce_findings.py
scripts/: plot_energy_drift.py
src/backend/: HIP_README.md  compute_backend.cpp
src/core/: task_system.cpp
src/editor/: editor_app.cpp  localization.cpp  selection_manager.cpp
src/engine/: command_history.cpp  module_manager.cpp  physics_world_gpu.cpp  physics_world_gpu_stub.cpp  scene_graph.cpp  scene_serializer.cpp  unified_engine.cpp  workspace.cpp
src/io/: mesh_importer.cpp  urdf_exporter.cpp  urdf_parser.cpp  urdf_physics_bridge.cpp
test_data/: simple_arm.urdf
tests/: constexpr_check.cpp  test_advanced_math.cpp  test_aerodynamics.cpp  test_backend.cpp  test_broadphase_gpu.cu  test_contact_cache.cpp  test_core_math.cpp  test_cuda_hello.cu  test_elastic_collision.cpp  test_energy_conservation.cpp  test_epa_gpu.cpp  test_fatigue.cpp  test_forces.cpp  test_formulas_compilation.cpp  test_fracture.cpp  test_free_fall.cpp  test_gear.cpp  test_joint_limits.cpp  test_joints.cpp  test_material.cpp  test_math_gpu.cu  test_matrix3.cpp  test_memory_manager.cpp  test_mpm_autodiff_tape_neutral.cpp  test_mpm_constitutive.cpp  test_mpm_cpu.cpp  test_mpm_rigid_coupler.cpp  test_mpm_rigid_cylinder.cpp  test_mpm_rigid_sweep.cpp  test_mpm_stress_isolation.cpp  test_mpm_visualizer.cpp  test_narrowphase_gpu.cu  test_newtons_cradle.cpp  test_pbr_material.cpp  test_pendulum.cpp  test_physics_validation.cpp  test_physics_world_gpu.cpp  test_plugin_loader.cpp  test_projectile_motion.cpp  test_quaternion.cpp  (+12 more)
tests/test_data/: simple_arm.urdf  turtlebot3_burger.urdf
validation/external_submissions/: README.md
(+100 files in other folders)
